--- a/src/styles/scss/nord.scss
+++ b/src/styles/scss/nord.scss
@@ -18,7 +18,7 @@ $nord15: #b48ead;
 
 /* Prettify by @pranavdeshai: Nord
 
-Version: 0.1.0
+Version: 0.1.1
 Readme: https://github.com/pranavdeshai/anki-prettify
 Links:
 - Reddit: https://www.reddit.com/user/Various_Breadfruit48
@@ -170,6 +170,7 @@ Links:
 .prettify-tags {
   margin: 2em;
   display: flex;
+  flex-flow: row wrap;
   font-size: var(--font-size-small);
 
   .mobile & {
@@ -187,9 +188,10 @@ Links:
   font-size: var(--font-size-small);
   font-family: var(--font-family);
   font-style: italic;
-  margin-right: 0.5em;
+  margin: 0 0.5em 0.5em 0;
   padding: 0.25em;
   transition: all 0.25s;
+  word-break: break-word;
 
   &:hover {
     background-color: var(--tag-bg-active);
